[gd_scene load_steps=22 format=2]

[ext_resource path="res://components/CustomerInstance.gd" type="Script" id=1]
[ext_resource path="res://assets/3D/meshes/mash_barkeeper.tres" type="ArrayMesh" id=2]
[ext_resource path="res://assets/3D/meshes/mesh_consumable_beer.tres" type="ArrayMesh" id=3]
[ext_resource path="res://assets/UI/balloon_light.png" type="Texture" id=4]
[ext_resource path="res://assets/UI/ui_beer.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/font_balloon.tres" type="DynamicFont" id=6]
[ext_resource path="res://components/InteractableArea.gd" type="Script" id=7]
[ext_resource path="res://assets/UI/ui_smiley_2.png" type="Texture" id=8]
[ext_resource path="res://assets/UI/puff.png" type="Texture" id=9]

[sub_resource type="CapsuleShape" id=6]
margin = 0.001
height = 2.0

[sub_resource type="Animation" id=7]
resource_name = "angry"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Mesh:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0.828442, 0 ), Vector3( 0, 0, 0 ), Vector3( 0, 0.688532, 0 ), Vector3( 0, 0, 0 ), Vector3( 0, 0.827729, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Mesh:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 4.51234, 0, 0 ), Vector3( 0, 0, 0 ), Vector3( -6.20312, 0, 0 ), Vector3( 0, 0, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ConsumableMesh:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=8]
resource_name = "consume"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Mesh:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Mesh:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Mesh:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ConsumableMesh:translation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 1.40762, 1.46592, 0.413855 ), Vector3( 1.40762, 1.46592, 0.413855 ), Vector3( 1.76525, 2.56735, 0.413855 ), Vector3( 1.40762, 1.46592, 0.413855 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ConsumableMesh:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 0 ), Vector3( 0, 0, 59.5735 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Mesh:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Mesh:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Mesh:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Mesh:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0.4, 0 ), Vector3( 0, 0, 0 ), Vector3( 0, 0.4, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Mesh:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( -8, 0, 0 ), Vector3( 0, 0, 0 ), Vector3( 8, 0, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Mesh:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 1, 1, 1 ), Vector3( 1, 1, 1 ) ]
}

[sub_resource type="CylinderShape" id=11]
radius = 1.80907
height = 2.52109

[sub_resource type="ParticlesMaterial" id=12]
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 10.0
angular_velocity = 1.15812e+021
scale_random = 0.5

[sub_resource type="SpatialMaterial" id=13]
flags_transparent = true
flags_unshaded = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 8 )

[sub_resource type="QuadMesh" id=14]
material = SubResource( 13 )
size = Vector2( 2, 2 )

[sub_resource type="ParticlesMaterial" id=3]
spread = 24.1
gravity = Vector3( 0, 0, 0 )
initial_velocity = 6.0
angular_velocity = -1.51263e-023
linear_accel = 33.07
scale_random = 0.5

[sub_resource type="SpatialMaterial" id=4]
flags_transparent = true
flags_unshaded = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 9 )

[sub_resource type="QuadMesh" id=5]
material = SubResource( 4 )
size = Vector2( 2, 2 )

[node name="CustomerInstance" type="KinematicBody"]
collision_layer = 16
collision_mask = 3
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, -1, 0, 1, -4.37114e-008, 0, 2, 0 )
shape = SubResource( 6 )

[node name="Mesh" type="MeshInstance" parent="."]
mesh = ExtResource( 2 )
material/0 = null

[node name="ConsumableMesh" type="MeshInstance" parent="."]
transform = Transform( 0.673544, -0.739147, 0, 0.739147, 0.673544, 0, 0, 0, 1, 1.69372, 2.34706, 0.413855 )
mesh = ExtResource( 3 )
material/0 = null

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/angry = SubResource( 7 )
anims/consume = SubResource( 8 )
anims/idle = SubResource( 9 )
anims/walk = SubResource( 10 )

[node name="OrderIndicator" type="Node2D" parent="."]
editor/display_folded = true

[node name="Balloon" type="Sprite" parent="OrderIndicator"]
position = Vector2( 0, -34 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="Icon" type="Sprite" parent="OrderIndicator"]
position = Vector2( 0, -44 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="OrderIndicator"]
margin_left = -34.9052
margin_top = -30.9622
margin_right = 36.0948
margin_bottom = -7.9622
custom_fonts/font = ExtResource( 6 )
text = "Beer"
align = 1

[node name="InteractableArea" type="Area" parent="."]
editor/display_folded = true
collision_layer = 4
collision_mask = 0
script = ExtResource( 7 )
interact_id = 2

[node name="CollisionShape" type="CollisionShape" parent="InteractableArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2924, 0 )
shape = SubResource( 11 )

[node name="WaitTimer" type="Timer" parent="."]

[node name="ConsumeTimer" type="Timer" parent="."]

[node name="PukeTimer" type="Timer" parent="."]

[node name="ArcadeTimer" type="Timer" parent="."]

[node name="SmileyParticles" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, 1, 0, -1, -4.37114e-008, 0, 5, 0 )
emitting = false
amount = 1
lifetime = 0.5
one_shot = true
speed_scale = 0.4
explosiveness = 0.24
process_material = SubResource( 12 )
draw_pass_1 = SubResource( 14 )

[node name="PuffParticles" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, 1, 0, -1, -4.37114e-008, 0, 5, 0 )
amount = 2
lifetime = 0.21
speed_scale = 0.4
randomness = 1.0
process_material = SubResource( 3 )
draw_pass_1 = SubResource( 5 )
